# vibebar

./: .gitignore  .mcp.json  Cargo.toml  README.md
.claude/agents/: frontend-designer.md  oracle.md
src/: main.rs
